
@startuml
package DB <<Database>> {

   class DataBase extends SQLiteOpenHelper{
   + onCreate   () : void
   + onUpgrade() : void
   }
}

class DBManager{
   + Connection : DataBase
   + DB: SQLiteDataBase
   + startDB() : {static} boolean
   + createCar() : {static} boolean
   + createClient() : {static} boolean
   + createService() : {static} boolean
   + consultCars () : {static} String
   + consultClients () : {static} String
   + consultServices () : {static} String
}



class MAINActivity{
    + btnCars,btnClients,.. : Button
    - listeners : MainListeners

    + onCreate() : void
    + startDB() : boolean
    + startCRUD() : void
    }

class CRUDActivity{
   + crud : CRUD
   - listeners : CRUDListeners
   + pos : String
   + lb1,lb2,lb3.. : TextView
   + box1,box2,box3 .. : EditText
   + source : ImageView
   + btn1,btn2,btn3.. : Button

   # onCreate() : void
   + setInterface() : void
   + update() : void
   + setup() : void
   + create() : void
   + back() : void
   + consult() : void
   + getBox() : String
}

'class ReportActivity{
'
'}


class CONSULTActivity{
    - viewGral : TextView
    + pos : {static} String

    # onCreate () : void
    + carConsult () : void
    + clientConsult (): void
    + serviceConsult (): void
}
abstract class CRUD {
# labels [] : String
# boxes [] : String
# source : String

# setLabels() : {abstract} void
# setSource() : {abstract} void
+ create(CRUDActivity) : {abstract} void

}

class MainListeners {
    + activity : MainActivity

    + onClick() : void

}

class CRUDListeners  {
   + activity : CRUDActivity
    + onClick() : void
}



class CRUDCar extends CRUD{
    + setLabels() : void
    + setSource() : void
    + create(CRUDActivity) : void
}

class CRUDClient extends CRUD{
     + setLabels() : void
     + setSource() : void
     + create(CRUDActivity) : void
}
class CRUDService extends CRUD{
     + setLabels() : void
     + setSource() : void
     + create(CRUDActivity) : void
}


DataBase --* DBManager

MAINActivity -- CRUDActivity
CRUDActivity -l CONSULTActivity


CRUDListeners -l* CRUDActivity
MainListeners -- MAINActivity

CRUDActivity *-- CRUD
@enduml
